syntax="proto3";

package api;
option java_package = "com.github.wenweihu86.distkv.api";
option java_outer_classname = "StoreMessage";

import "common.proto";

message SetRequest {
    bytes key = 1;
    bytes value = 2;
}

message SetResponse {
    BaseResponse base_res = 1;
}

message GetRequest {
    bytes key = 1;
}

message GetResponse {
    BaseResponse base_res = 1;
    bytes value = 2;
}

message DeleteRequest {
    bytes key = 1;
}

message DeleteResponse {
    BaseResponse base_res = 1;
}